kafka/kafdrop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/common-name: kafdrop.local.test
  labels:
    app.kubernetes.io/instance: kafdrop
    app.kubernetes.io/name: kafdrop
  name: kafdrop
  namespace: kafka
spec:
  ingressClassName: nginx
  rules:
  - host: kafdrop.local.test
    http:
      paths:
      - backend:
          service:
            name: kafdrop
            port:
              name: kafdrop
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kafdrop.local.test
    secretName: kafdrop-tls
